small spacing fix

--- a/src/components/Events/Events.module.css
+++ b/src/components/Events/Events.module.css
@@ -149,7 +149,7 @@
     font-size: 0.8rem;
     margin-bottom: 0;
     text-align: left;
-    line-height: .5;
+    line-height: 1.3;
 
 }
 
